Refine tutorials, add firebase

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <title>RxJS examples</title>
+    <meta name="description" content="RxJS examples">
+    <meta name="keywords" content="RxJS,JavaScript,examples,tutorial">
+    <meta name="author" content="Anna Tomka">
+</head>
 <body>
 <h1>RxJS examples</h1>
 
 <ul>
-    <li><a href="/interval-example/index.html">Interval example</a></li>
-    <li><a href="/mouse-tracking-example/index.html">Mouse tracking example</a></li>
-    <li><a href="/spotify-autocomplete-example/index.html">Spotify autocomplete example</a></li>
+    <li><a href="interval-example/index.html">Interval example</a></li>
+    <li><a href="mouse-tracking-example/index.html">Mouse tracking example</a></li>
+    <li><a href="spotify-autocomplete-example/index.html">Spotify autocomplete example</a></li>
 </ul>
 </body>
 
