--- a/spotify-autocomplete-example/index.html
+++ b/spotify-autocomplete-example/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>RxJS Spotify autocomplete example</title>
+    <meta name="description" content="RxJS examples">
+    <meta name="keywords" content="RxJS,JavaScript,examples,tutorial,Spotify">
+    <meta name="author" content="Anna Tomka">
+  </head>
   <body>
-    <input />
+    <h2>Find artists on Spotify</h2>
+    <input placeholder="Artist name"/>
     <br />
     <ul id="list"></ul>
 
