--- a/interval-example/index.html
+++ b/interval-example/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>RxJS interval example</title>
+    <meta name="description" content="RxJS examples">
+    <meta name="keywords" content="RxJS,JavaScript,examples,tutorial">
+    <meta name="author" content="Anna Tomka">
+  </head>
   <body>
+    <h2>Interval example</h2>
     <h1></h1>
     <script data-require="rxjs@4.0.6" data-semver="4.0.6" src="../lib/rx.all.js"></script>
     <script src="script.js"></script>
   </body>
-
 </html>
