--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>RxJS examples</h1>
 
 <ul>
-    <li><a href="interval-example/index.html">Image sampler example</a></li>
+    <li><a href="image-sampler-example/index.html">Image sampler example</a></li>
     <li><a href="interval-example/index.html">Interval example</a></li>
     <li><a href="mouse-tracking-example/index.html">Mouse tracking example</a></li>
     <li><a href="spotify-autocomplete-example/index.html">Spotify autocomplete example</a></li>
